--- a/app/src/main/res/layout/fragment_be_lucky_game.xml
+++ b/app/src/main/res/layout/fragment_be_lucky_game.xml
@@ -317,36 +317,62 @@
 
         </LinearLayout>
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_toRightOf="@+id/container1"
-            android:layout_toLeftOf="@+id/container2">
+            android:layout_toLeftOf="@+id/container2"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/namePlayer"
+            <RelativeLayout
+                android:layout_weight="1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent">
 
-                android:layout_marginTop="10dp"
-                android:gravity="center"
-                android:text="Lucas"
-                android:textColor="@android:color/black"
-                android:textSize="40dp"
-                android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/namePlayer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"
+                    android:text="Lucas"
+                    android:textColor="@android:color/black"
+                    android:textSize="40dp"
+                    android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/game_txt_doubleScreen"
+                <TextView
+                    android:id="@+id/game_txt_doubleScreen"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="100dp"
+                    android:gravity="center"
+                    android:text="Lucas retourne à la case départ"
+                    android:textColor="@android:color/black"
+                    android:textSize="20dp"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_weight="2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/middle_view"
-                android:layout_marginTop="100dp"
-                android:gravity="center"
-                android:text="Lucas retourne à la case départ"
-                android:textColor="@android:color/black"
-                android:textSize="20dp"/>
+                android:layout_height="match_parent"
+                android:layout_alignParentBottom="true"
+                android:layout_toRightOf="@+id/container1"
+                android:layout_toLeftOf="@+id/container2">
 
-        </RelativeLayout>
+                <ListView
+                    android:id="@+id/listPlayer"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:divider="@null"
+                    android:scrollbars="none"
+                    android:overScrollMode="never"
+                    android:layout_margin="5dp"
+                    />
+
+            </RelativeLayout>
+
+        </LinearLayout>
 
 
 
