--- a/app/src/main/res/layout/fragment_be_lucky_game_input.xml
+++ b/app/src/main/res/layout/fragment_be_lucky_game_input.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
+        android:gravity="center"
         android:id="@+id/playerName"
         android:layout_width="match_parent"
-        android:layout_height="30dp"/>
+        android:layout_height="30dp"
+        android:text="text"
+        android:textStyle="bold"
+        android:textSize="20dp"/>
 
-</LinearLayout>
+</RelativeLayout>
