--- a/app/src/main/res/layout/fragment_be_lucky_param_input.xml
+++ b/app/src/main/res/layout/fragment_be_lucky_param_input.xml
@@ -19,7 +19,9 @@
             android:padding="10dp"
             android:textStyle="normal"
             android:textColor="@android:color/black"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:layout_alignParentLeft="true"
+            android:layout_toLeftOf="@+id/playerColor"/>
 
         <ImageView
             android:id="@+id/playerColor"
