--- a/app/src/main/res/layout/fragment_be_lucky_game.xml
+++ b/app/src/main/res/layout/fragment_be_lucky_game.xml
@@ -12,6 +12,18 @@
         android:layout_margin="5dp"
         android:background="@drawable/border_view">
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/testanimate"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_marginTop="7dp"
+            android:src="@drawable/ic_color"
+            android:layout_marginLeft="5dp"
+            android:layout_marginBottom="60dp"
+            android:layout_marginRight="20dp"
+            android:tint="@android:color/holo_green_light"
+            android:layout_alignParentLeft="true"/>
+
         <LinearLayout
             android:id="@+id/container1"
             android:layout_width="80dp"
@@ -31,6 +43,7 @@
                     layout="@layout/be_lucky_case_left"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
+
 
             </RelativeLayout>
 
@@ -356,17 +369,43 @@
                         android:text="@string/BeLuckyBegin"
                         android:textColor="@android:color/black"
                         android:textSize="20dp"/>
+
+
                 </ScrollView>
 
                 <Button
                     android:id="@+id/endButton"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:background="@drawable/border_btn"
                     android:text="Fin de tour"
+                    android:layout_alignParentBottom="true"
+                    />
+
+                <EditText
+                    android:id="@+id/inputCheat"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginBottom="5dp"
+                    android:paddingLeft="5dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_toRightOf="@id/endButton"
+                    android:background="@drawable/border2"
+                    />
+
+                <Button
+                    android:id="@+id/debugBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_toRightOf="@+id/inputCheat"
+                    android:background="@drawable/border_btn"
+                    android:text="GO"
                     android:layout_alignParentBottom="true"
                     />
 
