--- a/app/src/main/res/layout/fragment_be_lucky_game_input.xml
+++ b/app/src/main/res/layout/fragment_be_lucky_game_input.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <com.lucasri.aperomix.views.AperoMixTextView
         android:gravity="center"
         android:id="@+id/playerName"
         android:layout_width="match_parent"
