--- a/app/src/main/res/layout/fragment_be_lucky_param.xml
+++ b/app/src/main/res/layout/fragment_be_lucky_param.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/border_view"
     >
 
-    <TextView
+    <com.lucasri.aperomix.views.AperoMixTextView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
