--- a/app/src/main/res/layout/fragment_be_lucky_param_input.xml
+++ b/app/src/main/res/layout/fragment_be_lucky_param_input.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/border">
 
-        <TextView
+        <com.lucasri.aperomix.views.AperoMixTextView
             android:id="@+id/playerName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
