--- a/app/src/main/res/layout/pmu_param_input.xml
+++ b/app/src/main/res/layout/pmu_param_input.xml
@@ -13,7 +13,7 @@
         android:background="@drawable/border"
         >
 
-        <TextView
+        <com.lucasri.aperomix.views.AperoMixTextView
             android:id="@+id/display_player"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
