--- a/app/src/main/res/layout/fragment_be_lucky_param_item.xml
+++ b/app/src/main/res/layout/fragment_be_lucky_param_item.xml
@@ -3,10 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="2dp">
 
     <RelativeLayout
+        android:id="@+id/beLucky_Param_input_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/border">
