--- a/app/src/main/res/layout/fragment_be_lucky_param.xml
+++ b/app/src/main/res/layout/fragment_be_lucky_param.xml
@@ -21,9 +21,9 @@
         android:textColor="@android:color/black"
         android:gravity="center"/>
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_below="@+id/title"
-        android:id="@+id/listPlayer"
+        android:id="@+id/beLucky_param_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@null"
