--- a/app/src/main/res/layout/fragment_pmu_param.xml
+++ b/app/src/main/res/layout/fragment_pmu_param.xml
@@ -8,8 +8,8 @@
     android:background="@drawable/border_view"
     >
 
-        <ListView
-            android:id="@+id/listPlayer"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/pmu_param_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:divider="@null"
