--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="AperoMixTextView">
+    <declare-styleable name="AperoMixFont">
         <attr name="fontName" format="enum">
             <enum name="Boogaloo_Regular" value="1" />
         </attr>
