--- a/app/src/main/res/layout/fragment_select_game.xml
+++ b/app/src/main/res/layout/fragment_select_game.xml
@@ -7,15 +7,15 @@
     android:background="@drawable/border_view"
     android:layout_below="@+id/toolbar">
 
-    <GridView
-        android:id="@+id/gvGames"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fragment_select_game_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:columnWidth="150dp"
         android:horizontalSpacing="15dp"
         android:numColumns="auto_fit"
         android:verticalSpacing="15dp"
-        android:layout_margin="20dp"
+        android:layout_margin="5dp"
         android:scrollbars="none"/>
 
 
