--- a/app/src/main/res/layout/fragment_details_games.xml
+++ b/app/src/main/res/layout/fragment_details_games.xml
@@ -19,6 +19,7 @@
             android:layout_height="80dp"
             app:cardCornerRadius="10dp"
             android:layout_marginTop="30dp"
+            android:layout_marginLeft="2dp"
             android:backgroundTint="@android:color/holo_blue_dark">
 
             <ImageView
@@ -42,7 +43,7 @@
             />
 
         <TextView
-            android:id="@+id/fragment_details__games_nbPlayer"
+            android:id="@+id/fragment_details_games_nbPlayer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/fragment_details_games_title"
@@ -55,13 +56,13 @@
             android:id="@+id/fragment_details_duration"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/fragment_details__games_nbPlayer"
+            android:layout_below="@+id/fragment_details_games_nbPlayer"
             android:layout_toRightOf="@+id/fragment_details_game_img"
             android:layout_marginLeft="20dp"
             android:text="30 minutes à 1 heure"/>
 
         <Button
-            android:id="@+id/fragment_details__games_playBtn"
+            android:id="@+id/fragment_details_games_playBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/fragment_details_duration"
@@ -70,7 +71,40 @@
             android:textAllCaps="false"
             android:background="@drawable/border_btn"
             android:textStyle="bold"
-            android:layout_marginBottom="100dp"/>
+            android:layout_marginRight="2dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginBottom="10dp"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/fragment_details_games_recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_below="@id/fragment_details_games_playBtn"/>
+
+        <TextView
+            android:id="@+id/fragment_details_games_description_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="2dp"
+            android:layout_marginLeft="2dp"
+            android:layout_below="@id/fragment_details_games_recyclerView"
+            android:text="Description :"
+            android:textStyle="bold"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            />
+
+        <TextView
+            android:id="@+id/fragment_details_games_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="2dp"
+            android:layout_marginLeft="2dp"
+            android:layout_below="@id/fragment_details_games_description_title"
+            android:text="is the most common problem occured in android while especially dealing with bitmaps. This error is thrown by the Java Virtual Machine (JVM) when an object cannot be allocated due to lack of memory space and also, the garbage collector cannot free some space."
+            />
 
     </RelativeLayout>
 
