--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,100 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/display_title"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_below="@+id/toolbar"
-    android:background="@drawable/border_view">
-
-    <com.lucasri.aperomix.views.AperoMixTextView
-        android:id="@+id/txt_ready"
-        android:layout_width="wrap_content"
-        android:layout_height="75dp"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
-        android:text="ApéroMix"
-        android:textColor="@android:color/black"
-        android:textSize="60dp"
-        android:textStyle="bold"/>
-
-    <com.lucasri.aperomix.views.AperoMixTextView
-        android:id="@+id/txt_subReady"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/txt_ready"
-        android:layout_centerHorizontal="true"
-        android:text="Jeu d'alcool"
-        android:textColor="@android:color/black"
-        android:textSize="35dp"
-        android:textStyle="bold"/>
-
-    <com.lucasri.aperomix.views.AperoMixTextView
-        android:id="@+id/txt_enterPlayer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="20dp"
-        android:layout_below="@+id/txt_subReady"
-        android:layout_centerHorizontal="true"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
-        android:textSize="30dp"
-        android:text="Entrer le nom des joueurs :"/>
+    android:background="@drawable/border_view"
+    android:orientation="vertical">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/txt_enterPlayer"
-        android:layout_marginLeft="100dp"
-        android:layout_marginBottom="118dp"
-        android:layout_marginRight="56dp"
-        >
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="0.2">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/main_fragment_recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_toLeftOf="@+id/plus_one"
-            android:divider="@null"
-            android:scrollbars="none"
-            android:overScrollMode="never"
-            />
+        <com.lucasri.aperomix.views.AperoMixTextView
+            android:id="@+id/fragment_main_title"
+            android:layout_width="wrap_content"
+            android:layout_height="75dp"
+            android:layout_marginTop="20dp"
+            android:layout_centerHorizontal="true"
+            android:text="@string/app_name"
+            android:textColor="@android:color/black"
+            android:textSize="60dp"
+            android:textStyle="bold"/>
 
-        <ImageView
-            android:id="@+id/plus_one"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="2dp"
-            android:layout_marginLeft="2dp"
-            android:background="@drawable/border"
-            android:src="@drawable/ic_add_black_48dp"
-            />
+        <com.lucasri.aperomix.views.AperoMixTextView
+            android:id="@+id/fragment_main_subtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fragment_main_title"
+            android:layout_centerHorizontal="true"
+            android:text="@string/fragment_main_subtitle"
+            android:textColor="@android:color/black"
+            android:textSize="35dp"
+            android:textStyle="bold"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/fragment_main_recycler_view"
+                android:layout_width="230dp"
+                android:layout_height="match_parent"
+                android:layout_above="@id/fragment_main_start_btn"
+                android:layout_marginTop="20dp"
+                android:layout_below="@id/fragment_main_subtitle"
+                android:layout_centerHorizontal="true"
+                android:divider="@null"
+                android:scrollbars="none"
+                android:overScrollMode="never"
+                />
+
+            <ImageView
+                android:id="@+id/fragment_main_addPlayer"
+                android:layout_width="44dp"
+                android:layout_height="44dp"
+                android:layout_marginTop="22dp"
+                android:tint="@android:color/black"
+                android:padding="5dp"
+                android:layout_below="@id/fragment_main_subtitle"
+                android:background="@drawable/border_btn_mainfragment"
+                android:layout_toRightOf="@id/fragment_main_recycler_view"
+                android:src="@drawable/ic_add_black_48dp"
+                android:layout_centerHorizontal="true"
+                android:text="Ajouter un joueur"
+                />
+
+            <com.lucasri.aperomix.views.AperoMixTextView
+                android:id="@+id/fragment_main_start_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:background="@color/colorPrimary"
+                android:paddingLeft="50dp"
+                android:paddingTop="10dp"
+                android:paddingRight="50dp"
+                android:paddingBottom="10dp"
+                android:layout_marginTop="20dp"
+                android:text="@string/fragment_main_start_btn"
+                android:gravity="center"
+                android:textColor="@android:color/black"
+                android:textSize="35dp"/>
 
     </RelativeLayout>
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-    <com.lucasri.aperomix.views.AperoMixButton
-        android:id="@+id/startButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:layout_alignParentBottom="true"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp"
-        android:paddingTop="10dp"
-        android:textSize="@dimen/TextSizeButton"
-        android:paddingBottom="10dp"
-        android:layout_marginRight="@dimen/marginRightAndLeftButton"
-        android:layout_marginLeft="@dimen/marginRightAndLeftButton"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/border_btn"
-        android:text="PLAY"
-        android:textColor="@android:color/black"
-        />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
 
-</RelativeLayout>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true">
+
+                    <ImageView
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:padding="10dp"
+                        android:layout_marginRight="10dp"
+                        app:srcCompat="@drawable/ic_account" />
+
+                    <ImageView
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:padding="10dp"
+                        android:layout_marginRight="10dp"
+                        app:srcCompat="@drawable/ic_support"/>
+
+                    <ImageView
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:padding="10dp"
+                        android:layout_marginRight="10dp"
+                        app:srcCompat="@drawable/ic_share"/>
+
+                    <ImageView
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:padding="10dp"
+                        app:srcCompat="@drawable/ic_info"/>
+
+                </LinearLayout>
+
+            </RelativeLayout>
+
+
+        </LinearLayout>
+
+</LinearLayout>
 
