--- a/app/src/main/res/layout/activity_game_container.xml
+++ b/app/src/main/res/layout/activity_game_container.xml
@@ -8,17 +8,17 @@ tools:context=".activities.GameContainer"
 android:background="@color/colorPrimary">
 
 <include
-    android:id="@+id/toolbar"
+    android:id="@+id/activity_game_container_toolbar"
     layout="@layout/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     />
 
 <FrameLayout
-    android:id="@+id/activity_game_frame"
+    android:id="@+id/activity_game_container_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_below="@+id/toolbar"
+    android:layout_below="@+id/activity_game_container_toolbar"
     android:layout_margin="5dp"/>
 
 
