--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.GameContainer"
-    android:background="@color/colorPrimary">
+    android:background="@android:color/white">
+
+    <include
+        android:id="@+id/activity_register_toolbar"
+        layout="@layout/toolbar_account_activity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
 
     <FrameLayout
-        android:id="@+id/activity_main_frame"
+        android:id="@+id/activity_register_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/activity_game_container_toolbar"
         android:layout_margin="5dp"/>
-
 
 </RelativeLayout>
