--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_below="@+id/toolbar"
+    android:layout_below="@+id/activity_game_container_toolbar"
     android:background="@drawable/border_view"
     android:orientation="vertical">
 
@@ -107,6 +107,7 @@
                     android:layout_centerHorizontal="true">
 
                     <ImageView
+                        android:id="@+id/fragment_main_account_btn"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:padding="10dp"
@@ -114,6 +115,7 @@
                         app:srcCompat="@drawable/ic_account" />
 
                     <ImageView
+                        android:id="@+id/fragment_main_support_btn"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:padding="10dp"
@@ -121,6 +123,7 @@
                         app:srcCompat="@drawable/ic_support"/>
 
                     <ImageView
+                        android:id="@+id/fragment_main_share_btn"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:padding="10dp"
@@ -128,6 +131,7 @@
                         app:srcCompat="@drawable/ic_share"/>
 
                     <ImageView
+                        android:id="@+id/fragment_main_info_btn"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:padding="10dp"
