--- a/app/src/main/res/layout/fragment_papin_game.xml
+++ b/app/src/main/res/layout/fragment_papin_game.xml
@@ -5,7 +5,7 @@
     android:id="@+id/game_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_below="@+id/toolbar"
+    android:layout_below="@+id/activity_game_container_toolbar"
     android:background="@drawable/border_view">
 
     <com.lucasri.aperomix.views.AperoMixTextView
