--- a/app/src/main/res/layout/fragment_select_game.xml
+++ b/app/src/main/res/layout/fragment_select_game.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/border_view"
-    android:layout_below="@+id/toolbar">
+    android:layout_below="@+id/activity_game_container_toolbar">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fragment_select_game_recycler_view"
