--- a/app/src/main/res/layout/toolbar_account_activity.xml
+++ b/app/src/main/res/layout/toolbar_account_activity.xml
@@ -4,10 +4,10 @@
     android:id="@+id/activity_game_container_toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="?attr/colorPrimary"
-    app:theme="@style/ToolbarTheme"
+    android:background="@android:color/transparent"
+    app:theme="@style/ToolbarLoginTheme"
     app:subtitleTextAppearance="@style/Toolbar.TitleText"
-    app:titleTextColor="@color/colorPrimary"
+    app:titleTextColor="@android:color/white"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto" />
 
