Make the account creation in registerFragment

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -19,7 +19,7 @@
         android:id="@+id/fragment_login_email_edt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/border2"
+        android:background="@drawable/background_edt"
         android:hint="@string/fragment_login_email"
         android:padding="15dp"
         android:layout_margin="15dp"
@@ -29,7 +29,7 @@
         android:id="@+id/fragment_login_password_edt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/border2"
+        android:background="@drawable/background_edt"
         android:hint="@string/fragment_login_password"
         android:padding="15dp"
         android:layout_margin="15dp"
