--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,10 +13,23 @@
         android:layout_height="wrap_content"
         />
 
+    <com.lucasri.aperomix.views.AperoMixTextView
+        android:id="@+id/fragment_register_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/fragment_register_title"
+        android:textColor="@android:color/black"
+        android:textSize="50dp"
+        android:paddingBottom="5dp"
+        android:gravity="center"/>
+
     <FrameLayout
         android:id="@+id/activity_register_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp"/>
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_below="@id/fragment_register_title"/>
 
 </RelativeLayout>
