--- a/app/src/main/res/layout/fragment_be_lucky_game.xml
+++ b/app/src/main/res/layout/fragment_be_lucky_game.xml
@@ -385,7 +385,7 @@
                     android:paddingLeft="5dp"
                     android:layout_alignParentBottom="true"
                     android:layout_toRightOf="@id/endButton"
-                    android:background="@drawable/border2"
+                    android:background="@drawable/background_edt"
                     />
 
                 <Button
