--- a/app/src/main/res/layout/fragment_main_item.xml
+++ b/app/src/main/res/layout/fragment_main_item.xml
@@ -11,7 +11,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/border2"
+        android:background="@drawable/background_edt"
         android:padding="10dp"
         android:layout_marginRight="5dp"
         android:layout_marginLeft="5dp"
