--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -5,44 +5,68 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.lucasri.aperomix.views.AperoMixTextView
-        android:id="@+id/fragment_register_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:text="@string/fragment_register_title"
-        android:textColor="@android:color/black"
-        android:textSize="50dp"
-        android:gravity="center"/>
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/fragment_register_title"
-
         android:scrollbars="none">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <EditText
+            <com.lucasri.aperomix.views.AperoMixEditText
                 android:id="@+id/fragment_register_email_edt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border2"
-                android:hint="@string/fragment_login_email"
+                android:background="@drawable/background_edt"
+                android:hint="@string/fragment_register_email"
                 android:padding="15dp"
                 android:layout_margin="15dp"
                 android:inputType="textEmailAddress"/>
 
             <EditText
-                android:id="@+id/fragment_register_password_edt"
+                android:id="@+id/fragment_register_pseudo_edt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/fragment_register_email_edt"
-                android:background="@drawable/border2"
+                android:background="@drawable/background_edt"
+                android:hint="@string/fragment_register_pseudo"
+                android:padding="15dp"
+                android:layout_margin="15dp"
+                android:inputType="textCapSentences"/>
+
+            <TextView
+                android:id="@+id/fragment_register_info_password"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="15dp"
+                android:layout_below="@+id/fragment_register_pseudo_edt"
+                android:textColor="@android:color/black"
+                android:text="@string/fragment_register_password_info"
+                android:textSize="10dp"/>
+
+            <EditText
+                android:id="@+id/fragment_register_password_edt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/fragment_register_info_password"
+                android:background="@drawable/background_edt"
                 android:hint="@string/fragment_login_password"
+                android:padding="15dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginBottom="15dp"
+                android:inputType="textPassword"/>
+
+            <EditText
+                android:id="@+id/fragment_register_confirmpassword_edt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/fragment_register_password_edt"
+                android:background="@drawable/background_edt"
+                android:hint="@string/fragment_register_confirmpassword"
                 android:padding="15dp"
                 android:layout_margin="15dp"
                 android:inputType="textPassword"/>
@@ -51,8 +75,8 @@
                 android:id="@+id/fragment_register_phone_number_edt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/fragment_register_password_edt"
-                android:background="@drawable/border2"
+                android:layout_below="@+id/fragment_register_confirmpassword_edt"
+                android:background="@drawable/background_edt"
                 android:hint="@string/fragment_register_phone_numbre"
                 android:padding="15dp"
                 android:layout_margin="15dp"
@@ -92,7 +116,7 @@
                 android:inputType="phone"/>
 
             <CheckBox
-                android:id="@+id/fragment_register_confirm_checkBox"
+                android:id="@+id/fragment_register_confirmadult_checkBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/fragment_register_datePicker"
@@ -101,9 +125,10 @@
                 android:layout_marginLeft="15dp"/>
 
             <Button
+                android:id="@+id/fragment_register_next_btn"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:layout_below="@id/fragment_register_confirm_checkBox"
+                android:layout_below="@id/fragment_register_confirmadult_checkBox"
                 android:background="@drawable/border_btn"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
@@ -115,5 +140,15 @@
         </RelativeLayout>
 
     </ScrollView>
+
+    <ProgressBar
+        android:background="@android:color/white"
+        android:id="@+id/fragment_register_loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:layout_centerInParent="true"
+        android:padding="50dp"
+        />
 
 </RelativeLayout>
