--- a/app/src/main/res/drawable/border_view.xml
+++ b/app/src/main/res/drawable/border_view.xml
@@ -3,13 +3,9 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/colorAccent"/>
-            <corners android:radius="10dp"/>
+            <corners android:radius="10dp" />
         </shape>
     </item>
     <item
-        android:drawable="@drawable/background"
-        android:bottom="5dp"
-        android:left="5dp"
-        android:right="5dp"
-        android:top="5dp"/>
+        android:drawable="@drawable/background"/>
 </layer-list>
