--- a/app/src/main/res/layout/activity_game_container.xml
+++ b/app/src/main/res/layout/activity_game_container.xml
@@ -1,25 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".controllers.activities.GameContainer"
-android:background="@color/colorPrimary">
-
-<include
-    android:id="@+id/activity_game_container_toolbar"
-    layout="@layout/toolbar"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    />
-
-<FrameLayout
-    android:id="@+id/activity_game_container_frame"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_below="@+id/activity_game_container_toolbar"
-    android:layout_margin="5dp"/>
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".controllers.activities.GameContainer"
+    android:background="@color/colorPrimary">
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:cardCornerRadius="10dp"
+            android:layout_margin="5dp"
+            android:outlineSpotShadowColor="@color/colorPrimary"
+            android:outlineAmbientShadowColor="@color/colorPrimary">
+
+            <FrameLayout
+                android:id="@+id/activity_game_container_frame"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </androidx.cardview.widget.CardView>
+
+    </RelativeLayout>
+
+    <include
+        android:id="@+id/activity_game_container_toolbar"
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+    />
 
 
 </RelativeLayout>
