--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -14,16 +14,42 @@
         android:layout_height="match_parent"
         android:layout_weight="0.2">
 
+        <ImageView
+            android:id="@+id/fragment_main_addPlayer"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:layout_below="@id/fragment_main_subtitle"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="22dp"
+            android:layout_toRightOf="@id/fragment_main_recycler_view"
+            android:background="@drawable/border_btn_mainfragment"
+            android:padding="5dp"
+            android:src="@drawable/ic_add_black_48dp"
+            android:text="Ajouter un joueur"
+            android:tint="@android:color/black" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/fragment_main_recycler_view"
+            android:layout_width="230dp"
+            android:layout_height="match_parent"
+            android:layout_above="@id/fragment_main_start_btn"
+            android:layout_below="@id/fragment_main_subtitle"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:divider="@null"
+            android:overScrollMode="never"
+            android:scrollbars="none" />
+
         <com.lucasri.aperomix.views.AperoMixTextView
             android:id="@+id/fragment_main_title"
             android:layout_width="wrap_content"
             android:layout_height="75dp"
-            android:layout_marginTop="20dp"
             android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
             android:text="@string/app_name"
             android:textColor="@android:color/black"
             android:textSize="60dp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <com.lucasri.aperomix.views.AperoMixTextView
             android:id="@+id/fragment_main_subtitle"
@@ -34,56 +60,27 @@
             android:text="@string/fragment_main_subtitle"
             android:textColor="@android:color/black"
             android:textSize="35dp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/fragment_main_recycler_view"
-                android:layout_width="230dp"
-                android:layout_height="match_parent"
-                android:layout_above="@id/fragment_main_start_btn"
-                android:layout_marginTop="20dp"
-                android:layout_below="@id/fragment_main_subtitle"
-                android:layout_centerHorizontal="true"
-                android:divider="@null"
-                android:scrollbars="none"
-                android:overScrollMode="never"
-                />
-
-            <ImageView
-                android:id="@+id/fragment_main_addPlayer"
-                android:layout_width="44dp"
-                android:layout_height="44dp"
-                android:layout_marginTop="22dp"
-                android:tint="@android:color/black"
-                android:padding="5dp"
-                android:layout_below="@id/fragment_main_subtitle"
-                android:background="@drawable/border_btn_mainfragment"
-                android:layout_toRightOf="@id/fragment_main_recycler_view"
-                android:src="@drawable/ic_add_black_48dp"
-                android:layout_centerHorizontal="true"
-                android:text="Ajouter un joueur"
-                />
-
-            <com.lucasri.aperomix.views.AperoMixTextView
-                android:id="@+id/fragment_main_start_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:background="@color/colorPrimary"
-                android:paddingLeft="50dp"
-                android:paddingTop="10dp"
-                android:paddingRight="50dp"
-                android:paddingBottom="10dp"
-                android:layout_marginTop="20dp"
-                android:text="@string/fragment_main_start_btn"
-                android:gravity="center"
-                android:textColor="@android:color/black"
-                android:textSize="35dp"/>
+        <com.lucasri.aperomix.views.AperoMixTextView
+            android:id="@+id/fragment_main_start_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="20dp"
+            android:background="@color/colorPrimary"
+            android:gravity="center"
+            android:paddingLeft="50dp"
+            android:paddingTop="10dp"
+            android:paddingRight="50dp"
+            android:paddingBottom="10dp"
+            android:text="@string/fragment_main_start_btn"
+            android:textColor="@android:color/black"
+            android:textSize="35dp" />
 
     </RelativeLayout>
 
-
-        <LinearLayout
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
