--- a/app/src/main/res/layout/fragment_papin_game.xml
+++ b/app/src/main/res/layout/fragment_papin_game.xml
@@ -9,7 +9,7 @@
     android:background="@drawable/border_view">
 
     <com.lucasri.aperomix.views.AperoMixTextView
-        android:id="@+id/nameGame"
+        android:id="@+id/fragment_papin_game_name_single"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -19,23 +19,168 @@
         android:textSize="50dp"
         android:textStyle="bold" />
 
+    <LinearLayout
+        android:id="@+id/fragment_papin_game_btn_container_single"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/fragment_papin_game_counter_single"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="5dp"
+            android:layout_margin="5dp"
+            app:cardBackgroundColor="@color/colorPrimary">
+
+            <ImageView
+                android:id="@+id/fragment_papin_game_double_screen_btn_single"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:padding="5dp"
+                android:src="@drawable/ic_mobile_double_screen_48dp"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="5dp"
+            android:layout_margin="5dp"
+            app:cardBackgroundColor="@color/colorPrimary">
+
+            <ImageView
+                android:id="@+id/fragment_papin_game_navigate_btn_single"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:padding="5dp"
+                android:src="@drawable/ic_replay_black_48dp"/>
+
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/fragment_papin_game_btn_container_doubleScreen1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/fragment_papin_game_counter_doubleScreen1">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="5dp"
+            android:layout_margin="5dp"
+            app:cardBackgroundColor="@color/colorPrimary">
+
+            <ImageView
+                android:id="@+id/fragment_papin_game_double_screen_btn_doubleScreen1"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:padding="5dp"
+                android:src="@drawable/ic_mobile_single_screen_48dp"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="5dp"
+            android:layout_margin="5dp"
+            app:cardBackgroundColor="@color/colorPrimary">
+
+            <ImageView
+                android:id="@+id/fragment_papin_game_navigate_btn_doubleScreen1"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:padding="5dp"
+                android:src="@drawable/ic_replay_black_48dp"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <ImageView
+            android:id="@+id/fragment_papin_game_info_btn_doubleScreen1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="3dp"
+            android:src="@drawable/ic_info_48dp"
+            />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/fragment_papin_game_btn_container_doubleScreen2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="30dp"
+        android:layout_above="@+id/fragment_papin_game_counter_doubleScreen2"
+        android:rotation="180">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="5dp"
+            android:layout_margin="5dp"
+            app:cardBackgroundColor="@color/colorPrimary">
+
+            <ImageView
+                android:id="@+id/fragment_papin_game_double_screen_btn_doubleScreen2"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:padding="5dp"
+                android:src="@drawable/ic_mobile_single_screen_48dp"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="5dp"
+            android:layout_margin="5dp"
+            app:cardBackgroundColor="@color/colorPrimary">
+
+            <ImageView
+                android:id="@+id/fragment_papin_game_navigate_btn_doubleScreen2"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:padding="5dp"
+                android:src="@drawable/ic_replay_black_48dp"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <ImageView
+            android:id="@+id/fragment_papin_game_info_btn_doubleScreen2"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="3dp"
+            android:src="@drawable/ic_info_48dp"
+            />
+
+    </LinearLayout>
+
     <com.lucasri.aperomix.views.AperoMixTextView
-        android:id="@+id/game_txt_doubleScreen"
+        android:id="@+id/fragment_papin_game_rule_txt_doubleScreen1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/middle_view"
+        android:layout_below="@+id/fragment_papin_game_middle_view"
         android:layout_marginTop="100dp"
         android:gravity="center"
         android:text="PAPIN GAME"
         android:textColor="@android:color/black"
         android:textSize="40dp"/>
 
+
     <com.lucasri.aperomix.views.AperoMixTextView
-        android:id="@+id/game_txt_inverse"
+        android:id="@+id/fragment_papin_game_rule_txt_doubleScreen2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="100dp"
-        android:layout_above="@+id/middle_view"
+        android:layout_above="@+id/fragment_papin_game_middle_view"
         android:gravity="center"
         android:text="PAPIN GAME"
         android:textColor="@android:color/black"
@@ -43,47 +188,49 @@
         android:rotation="180"/>
 
     <TextView
-        android:id="@+id/counter"
+        android:id="@+id/fragment_papin_game_counter_single"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout="@+id/nameGameInverse"
-        android:layout_below="@id/nameGame"
+        android:layout_below="@id/fragment_papin_game_name_single"
         android:layout_centerHorizontal="true"
+        android:text="3/52"
         />
 
     <TextView
-        android:id="@+id/counter_doubleScreen"
+        android:id="@+id/fragment_papin_game_counter_doubleScreen1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout="@+id/nameGameInverse"
-        android:layout_below="@id/middle_view"
+        android:layout_below="@id/fragment_papin_game_middle_view"
         android:layout_centerHorizontal="true"
+        android:text="1/52"
         />
 
     <TextView
-        android:id="@+id/counter_doubleScreen_inverse"
+        android:id="@+id/fragment_papin_game_counter_doubleScreen2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout="@+id/nameGameInverse"
-        android:layout_above="@id/middle_view"
+        android:layout_above="@id/fragment_papin_game_middle_view"
         android:layout_centerHorizontal="true"
         android:rotation="180"
+        android:text="1/52"
         />
 
     <RelativeLayout
-        android:id="@+id/middle_view"
+        android:id="@+id/fragment_papin_game_middle_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true">
 
         <com.lucasri.aperomix.views.AperoMixTextView
-            android:id="@+id/nameGame_doubleScreen_inverse"
+            android:id="@+id/fragment_papin_game_name_doubleScreen2"
             android:rotation="180"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_centerHorizontal="true"
             android:text="PAPIN GAME"
             android:textAlignment="center"
             android:textColor="@android:color/black"
@@ -91,12 +238,11 @@
             android:textStyle="bold"/>
 
         <com.lucasri.aperomix.views.AperoMixTextView
-            android:id="@+id/nameGame_doubleScreen"
+            android:id="@+id/fragment_papin_game_name_doubleScreen1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="80dp"
-            android:layout_marginRight="10dp"
             android:text="PAPIN GAME"
             android:textStyle="bold"
             android:textAlignment="center"
@@ -104,10 +250,12 @@
             android:textSize="50dp"
             />
 
+
+
     </RelativeLayout>
 
     <com.lucasri.aperomix.views.AperoMixTextView
-        android:id="@+id/game_txt_alone"
+        android:id="@+id/fragment_papin_game_rule_txt_single"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -129,12 +277,13 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/middle_view">
+        android:layout_marginTop="50dp"
+        android:layout_below="@id/fragment_papin_game_middle_view">
 
         <ImageView
             app:srcCompat="@drawable/ic_arrow_left"
             android:tint="@android:color/black"
-            android:id="@+id/previous_rule"
+            android:id="@+id/fragment_papin_game_previous_rule_single"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_alignParentLeft="true"/>
@@ -142,30 +291,101 @@
         <ImageView
             app:srcCompat="@drawable/ic_arrow_right"
             android:tint="@android:color/black"
-            android:id="@+id/next_rule"
+            android:id="@+id/fragment_papin_game_next_rule_single"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_alignParentRight="true"/>
 
     </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/fragment_papin_game_counter_doubleScreen1">
+
+        <ImageView
+            android:id="@+id/fragment_papin_game_previous_rule_doubleScreen1"
+            app:srcCompat="@drawable/ic_arrow_left"
+            android:tint="@android:color/black"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_alignParentLeft="true"/>
+
+        <ImageView
+            android:id="@+id/fragment_papin_game_next_rule_doubleScreen1"
+            app:srcCompat="@drawable/ic_arrow_right"
+            android:tint="@android:color/black"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_alignParentRight="true"/>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/fragment_papin_game_counter_doubleScreen2">
+
+        <ImageView
+            android:id="@+id/fragment_papin_game_next_rule_doubleScreen2"
+            app:srcCompat="@drawable/ic_arrow_left"
+            android:tint="@android:color/black"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_alignParentLeft="true"/>
+
+        <ImageView
+            android:id="@+id/fragment_papin_game_previous_rule_doubleScreen2"
+            app:srcCompat="@drawable/ic_arrow_right"
+            android:tint="@android:color/black"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_alignParentRight="true"/>
+
+    </RelativeLayout>
+
     <com.lucasri.aperomix.views.AperoMixButton
-        android:id="@+id/bottom_btn"
+        android:id="@+id/fragment_papin_game_bottom_btn_single"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@drawable/border_btn"
+        android:background="@color/colorPrimary"
         android:layout_alignParentBottom="true"
-        android:layout_marginRight="@dimen/marginRightAndLeftButton"
-        android:layout_marginLeft="@dimen/marginRightAndLeftButton"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="90dp"
         android:text="Compte à rebours"
         android:textSize="@dimen/TextSizeButton"
         android:textColor="@android:color/black"
         android:padding="10dp"
         />
 
+    <com.lucasri.aperomix.views.AperoMixButton
+        android:id="@+id/fragment_papin_game_bottom_btn_doubleScreen1"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/colorPrimary"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="60dp"
+        android:text="Compte à rebours"
+        android:textSize="@dimen/TextSizeButton"
+        android:textColor="@android:color/black"
+        android:padding="5dp"
+        />
+
+    <com.lucasri.aperomix.views.AperoMixButton
+        android:id="@+id/fragment_papin_game_bottom_btn_doubleScreen2"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/colorPrimary"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="60dp"
+        android:text="Compte à rebours"
+        android:textSize="@dimen/TextSizeButton"
+        android:textColor="@android:color/black"
+        android:padding="5dp"
+        android:rotation="180"
+        />
+
     <ImageView
-        android:id="@+id/info_btn"
+        android:id="@+id/fragment_papin_game_info_btn_single"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/ic_info_48dp"
@@ -173,6 +393,5 @@
         android:layout_alignParentBottom="true"
         android:layout_margin="10dp"
         />
-
 
 </RelativeLayout>
